--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -828,7 +828,8 @@ overflow: hidden;
 
         .footer p {
             margin: 0.5rem 0;
-            color: #F2FFFA;
+            color: #333333;
+            font-weight: 500;
         }
 
         /* Responsive */
